--- a/css/main.css
+++ b/css/main.css
@@ -652,7 +652,7 @@ table tr:hover {
 .site-header {
   height: 60px;
   position: relative;
-  background-color: #0078d9;
+  background-color: #808080;
   overflow: hidden;
 }
 
